fixed overflow on swiper

--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,5 @@
 @import "tailwindcss";
 @import 'swiper/swiper-bundle.css';
+
+body {
+    background-color: #112231; }
